tests/expected/task-2/class-example-2.uc.out
---
test: type suites/task-2/class-example-2.uc
---
suites/task-2/class-example-2.uc:7:8: type error: Cannot unify '⟦1[7:8]⟧' and 'int' (with canonicals '↑⟦(*y)[6:8]⟧' and 'int')
     y = 1;
         ^


exit: 1
